# healthcareInteroperability

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: publish.yml
src/healthcare_sdk/: __init__.py  app.py  contracts.py  errors.py  sdk.py
src/healthcare_sdk/TransportLayer/: __init__.py  adapter.py  restController.py
src/healthcare_sdk/repositories/: __init__.py  base.py  messageLog.py  postgreSqlStorage.py  storage.py
src/healthcare_sdk/tools/: __init__.py  aiHelper.py  decoder.py  normalizer.py  validator.py
src/healthcare_sdk/usecases/: __init__.py  defaultHealthCareUsecase.py  healthCareUsecase.py
tests/: conftest.py
tests/integration/: test_1_3_rest_controller_integration.py  test_4_5_postgresql_testcontainer.py
tests/unit/: test_1_1_pytest_infrastructure.py  test_1_2_rest_controller_isolation.py  test_1_4_adapter_extensibility.py  test_2_1_protocol_isinstance_checks.py  test_2_2_template_base_classes.py  test_2_3_register_components.py  test_2_4_contract_failure_detection.py  test_3_1_message_envelope_tracking.py  test_3_2_default_healthcare_usecase.py  test_3_3_pipeline_error_capture.py  test_4_1_sqlalchemy_base_and_message_log.py  test_4_2_postgres_sql_storage_crud.py  test_4_3_custom_entity_inheritance.py  test_4_4_orm_agnostic_storage.py  test_4_6_clean_architecture.py
