[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-sdk"
version = "0.1.1"
description = "Healthcare interoperability framework SDK"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "psycopg2>=2.9.0",
    "pytest>=9.0.3",
    "httpx>=0.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "p0: smoke — executa em todo PR (obrigatorio)",
    "p1: core — executa em todo PR (recomendado)",
    "p2: extended — executa em nightly",
    "p3: edge — executa manualmente",
]
